# money-honey

./: .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .trivyignore.yaml  ARCHITECTURE.md  CLAUDE.md  README.md  STATUS.md  _config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: aibom.yaml  deploy.yaml  docker-build.yaml  hubness-scan.yaml  quality.yaml
_includes/: head_custom.html
app/: .dockerignore  .env.example  Dockerfile  main.py  personality.py  pyproject.toml  rag.py  requirements.txt
app/tests/: conftest.py  test_health.py  test_personality.py  test_rag.py
app/tests/demos/: README.md
app/tests/demos/codeguard/: path_traversal.py  test_path_traversal.py
app/tests/demos/tetragon/: test_tracing_policy_structure.py
app/tests/demos/trivy_ignore/: test_expiry_policy.py
assets/css/: style.scss
docs/: cost.md  index.md  lessons-learned.md  roadmap.md
docs/architecture/: ai-security.md  developer-workflow.md  index.md  infrastructure.md  overview.md
docs/chatbot/: index.md  personality.md  rag-pipeline.md
docs/runbooks/: index.md  recover-splunk.md  rollback-deploy.md  rotate-kv-secret.md  tunnel-outage.md
docs/setup/: azure-sp-for-ci.md  cloudflare-tunnel.md  index.md  knowledge-base.md  kv-secrets.md  prerequisites.md  splunk.md  terraform.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
k8s/: namespace.yaml
(+59 files in other folders)
